k8s/auth-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: auth-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: auth-app

  template:
    metadata:
      labels:
        app: auth-app

    spec:
      containers:
      - name: auth-container
        image: manishh08/auth-service:v1

        ports:
        - containerPort: 5001
