k8s/order-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: order-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: order-app

  template:
    metadata:
      labels:
        app: order-app

    spec:
      containers:
      - name: order-container
        image: manishh08/order-service:latest

        ports:
        - containerPort: 5003
