k8s/auth-service.yml
apiVersion: v1
kind: Service

metadata:
  name: auth-service

spec:
  type: ClusterIP

  selector:
    app: auth-app

  ports:
  - protocol: TCP
    port: 80
    targetPort: 5001
