k8s/product-service.yml
apiVersion: v1
kind: Service

metadata:
  name: product-service

spec:
  type: ClusterIP

  selector:
    app: product-app

  ports:
  - protocol: TCP
    port: 80
    targetPort: 5002
