k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: microservice-ingress

spec:
  ingressClassName: nginx

  rules:

  - http:
      paths:

      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 80

      - path: /product
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 80

      - path: /order
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 80
